--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "[zig]": {
         "editor.defaultFormatter": "tiehuis.zig",
         "zig.buildOnSave": true,
+        "editor.useTabStops": false
     },
 }
