--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
             "name": "Launch x86_64",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/zig-out/bin/zigject-hooker.exe",
+            "program": "${workspaceFolder}/zig-out/bin/zigject-injecter.exe",
             "args": [],
             "stopAtEntry": false,
-            "pwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}",
             "environment": [],
             "preLaunchTask": "build-x86_64"
         },
@@ -19,7 +19,7 @@
             "program": "${workspaceFolder}/zig-out/bin/zigject-hooker.exe",
             "args": [],
             "stopAtEntry": false,
-            "pwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}",
             "environment": [],
             "preLaunchTask": "build-x86"
         }
