--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/lib/zigwin32"]
 	path = src/lib/zigwin32
 	url = https://github.com/marlersoft/zigwin32.git
+[submodule "src/lib/zydis"]
+	path = src/lib/zydis
+	url = https://github.com/zyantific/zydis.git
